--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,22 @@
 	<name>${project.artifactId}</name>
 
 	<parent>
-		<groupId>uqbar</groupId>
-		<artifactId>arena-parent</artifactId>
-		<version>1.3-SNAPSHOT</version>
+		<groupId>org.uqbar-project</groupId>
+		<artifactId>uqbar-scala-parent</artifactId>
+		<version>1.0</version>
 	</parent>
+
+	<scm>
+		<connection>scm:hg:${scm.hgServer}/${project.artifactId}</connection>
+		<developerConnection>scm:hg:${scm.hgServer}/${project.artifactId}</developerConnection>
+		<url>scm:hg:${scm.hgServer}/${project.artifactId}</url>
+	</scm>
 
 	<dependencies>
 		<dependency>
-			<groupId>uqbar</groupId>
+			<groupId>org.uqbar-project</groupId>
 			<artifactId>arena-jface</artifactId>
-			<version>${arena-version}</version>
+			<version>3.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
