--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,15 @@
 	<parent>
 		<groupId>org.uqbar-project</groupId>
 		<artifactId>uqbar-scala-parent</artifactId>
-		<version>1.3</version>
+		<version>1.0</version>
 	</parent>
 
-	<scm>
-		<connection>scm:hg:${scm.hgServer}/${project.artifactId}</connection>
-		<developerConnection>scm:hg:${scm.hgServer}/${project.artifactId}</developerConnection>
-		<url>scm:hg:${scm.hgServer}/${project.artifactId}</url>
-	</scm>
-
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <maven.compiler.source>1.8</maven.compiler.source>
+	    <maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+        
 	<dependencies>
 		<dependency>
 			<groupId>org.uqbar-project</groupId>
@@ -25,4 +25,5 @@
 			<version>3.6.3</version>
 		</dependency>
 	</dependencies>
+	
 </project>
