--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	</parent>
 
 	<properties>
+		<scala.version>2.11.2</scala.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	    <maven.compiler.source>1.8</maven.compiler.source>
 	    <maven.compiler.target>1.8</maven.compiler.target>
